followme/k8s/k8s-control.yaml
# control
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dse2024-control
  namespace: dse2024
spec:
  selector:
    matchLabels:
      app: dse2024-control
  replicas: 1
  template:
    metadata:
      labels:
        app: dse2024-control
    spec:
      containers:
        - name: dse2024-inventory
          image: europe-west9-docker.pkg.dev/dse2024-425312/dse-repo/k8s-control
          ports:
            - containerPort: 8003

  revisionHistoryLimit: 2
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
---
apiVersion: v1
kind: Service
metadata:
  name: dse2024-control-service
  namespace: dse2024
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: dse2024-control
  ports:
    - port: 8003
      protocol: TCP
      targetPort: 8003
